# crosspoint-reader

./: AGENTS.md  build.sh
.clinerules/: holicode.md
.clinerules/config/: infra-patterns.md
.github/agents/: analyse-test-execution.md  analysis-to-task.md  business-analyze.md  context-verify.md  framework-integration-test.md  framework-setup.md  functional-analyze.md  git-branch-manager.md  git-commit-manager.md  github-pr-create.md  github-pr-review.md  github-pr-update.md  implementation-plan.md  inbox-process.md  intake-triage.md  orchestrate-story.md  quality-validate.md  session-retrospective.md  spec-backfill.md  spec-workflow.md  spike-investigate.md  state-health-check.md  state-init.md  state-review.md  state-update.md  task-handoff.md  task-implement.md  tech-review-post-planning.md  technical-design.md
.github/skills/hc-action-analyze/: SKILL.md
.github/skills/hc-action-implement/: SKILL.md
.github/skills/hc-agent-session-protocol/: SKILL.md
.github/skills/hc-agentic-env-lifecycle/: SKILL.md
.github/skills/hc-analyse-test-execution/: SKILL.md
.github/skills/hc-analysis-to-task/: SKILL.md
.github/skills/hc-business-analyze/: SKILL.md
.github/skills/hc-code-review/: SKILL.md
.github/skills/hc-coder-cli/: SKILL.md
.github/skills/hc-context-verify/: SKILL.md
.github/skills/hc-data-ingestion/: SKILL.md
.github/skills/hc-dev-review-loop/: SKILL.md
.github/skills/hc-forgejo-sync/: SKILL.md
.github/skills/hc-framework-integration-test/: SKILL.md
.github/skills/hc-framework-setup/: SKILL.md
.github/skills/hc-functional-analyze/: SKILL.md
.github/skills/hc-gh-auth/: SKILL.md
.github/skills/hc-git-branch-manager/: SKILL.md
.github/skills/hc-git-commit-manager/: SKILL.md
.github/skills/hc-github-pr-create/: SKILL.md
.github/skills/hc-github-pr-review/: SKILL.md
.github/skills/hc-github-pr-update/: SKILL.md
.github/skills/hc-holicode-migrate/: SKILL.md
.github/skills/hc-holicode-sync/: SKILL.md
.github/skills/hc-implementation-plan/: SKILL.md
.github/skills/hc-inbox-process/: SKILL.md
.github/skills/hc-index-load/: SKILL.md
.github/skills/hc-intake-triage-classifier/: SKILL.md
.github/skills/hc-intake-triage-sensor/: SKILL.md
.github/skills/hc-issue-sync/: SKILL.md
.github/skills/hc-issue-tracker/: SKILL.md
.github/skills/hc-issue-tracker-github-issues/: SKILL.md
.github/skills/hc-issue-tracker-local/: SKILL.md
.github/skills/hc-issue-tracker-vibe-kanban/: SKILL.md
.github/skills/hc-orchestrate-story/: SKILL.md
.github/skills/hc-quality-validate/: SKILL.md
.github/skills/hc-research-dispatch/: SKILL.md
.github/skills/hc-session-retrospective/: SKILL.md
.github/skills/hc-spec-backfill/: SKILL.md
.github/skills/hc-spec-workflow/: SKILL.md
.github/skills/hc-spike-investigate/: SKILL.md
.github/skills/hc-state-health-check/: SKILL.md
.github/skills/hc-state-init/: SKILL.md
.github/skills/hc-state-review/: SKILL.md
.github/skills/hc-state-update/: SKILL.md
.github/skills/hc-task-handoff/: SKILL.md
.github/skills/hc-task-implement/: SKILL.md
.github/skills/hc-task-init/: SKILL.md
.github/skills/hc-tech-review-post-planning/: SKILL.md
.github/skills/hc-technical-design/: SKILL.md
.github/skills/hc-tpm-report/: SKILL.md
.github/skills/hc-workspace-harvest/: SKILL.md
.holicode/: .framework-manifest
.holicode/scripts/: collect-sdd-poc-artifacts.sh  install-user-framework.sh  integrate-project.sh  package.sh  poc-workspace-reset.sh  reference-audit.sh  update.sh  validate-context-frontmatter.sh  version-diff.sh
lib/hal_sim/: HalDisplay.cpp  HalDisplay.h  HalGPIO.cpp  HalGPIO.h  HalPowerManager.cpp  HalPowerManager.h  HalStorage.cpp  HalStorage.h
sim/: CMakeLists.txt  sim_main.cpp
sim/compat/: Arduino.h  HardwareSerial.h  Print.h  WString.h
sim/diag/: DiagFont.h
sim/input/: SimInput.h
sim/sim_src/: CrossPointSettings.cpp  OpdsServerStore.cpp  RecentBooksStore.cpp  UITheme.cpp
sim/stub/: HalDisplay.h  HalGPIO.h  HalStorage.h  uzlib_chksum_stubs.c
(+43 files in other folders)
